# Hump3DFluidFlow

./: .gitignore  CMakeLists.txt  Hump3DWrapModeling.sln  README.md
Hump3DWrapModeling/: 3D_stencil.cu  3D_stencil.cuh  Config.cpp  Config.h  Hump3DWrapModeling.vcxproj  Hump3DWrapModeling.vcxproj.filters  New Text Document.txt  SimulationParams.h  calculating_functions.h  calculating_kernels.cu  calculating_kernels.cuh  calulating_functions.cpp  cell_calculating_functions.cu  cell_calculating_functions.cuh  cell_calculating_functions.h  consts.h  cuda_consts.cuh  export_functions.cpp  export_functions.h  flow.vts  grid.vts  main.cpp  main.cu  test_kernels.cu  test_kernels.cuh
configs/: testconf
